<resources>

    <string name="app_name">NcueWifiAuthentication</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="account_title">Account</string>
    <string name="password_title">Password</string>
    <string name="button_login_title">Login</string>
    <string name="button_logout_title">Logout</string>
    <string name="login_success">Login Success</string>
    <string name="logout_success">Logout Success</string>
    <string name="already_login">Already Login</string>
    <string name="login_failed">Information Error. Please check again.</string>
    <string name="login_only_one_user">This account already login from other device.</string>
    <string name="lo_exception">Opps!! Something wrong.\n.Please try again later</string>
    <string name="em_user">Please enter Account.</string>
    <string name="em_password">Please enter Password.</string>
    <string name="em_wifi_enable">Please enable WIFI.</string>
    <string name="em_wifi_connect">Please connect to NCUE.</string>
    <string name="open_wifi">Open Wifi</string>
    <string name="ncue_logo_title">Ncue Wifi Authentication System</string>
    <string name="login_start">Start Login</string>
    <string name="logout_start">Start Logout</string>
    <string name="ncue_wifi_warning">彰化師大無線網路注意事項：\n\n
									1.彰化師大無線網路使用帳號與密碼，已整合至全校單一簽入系統。\n\n
									2.本校無線網路亦有加入教育部校園無線網路漫遊機制，可提供師生
										使用本校的無線網	路帳號與密碼於其他學校的無線網路認證使用。\n\n
									3.教職員生請使用校園資訊服務入口之帳號與密碼，並請於帳號後加上@cc.ncue.edu.tw
									 	(教職員部份) 或 @mail.ncue.edu.tw(博碩學士生、進修部在職班部分)。\n\n
									4.兩台不同電腦或手持式設備於短時間內要以相同帳號登入不同設備時，必須先登出帳
									 	號，如無出現登出視窗，就必須關閉登入帳號的電腦或設備並等待十五分鐘，方可在其
									 	他電腦再次以同一帳號登入。</string>
    <string name="record_information_title">Remember Information</string>
    <string name="login_imagebutton_info">Widget info</string>
    <string name="open_wifi_confirm">GO Set</string>
    <string name="open_wifi_cancel">Cancel</string>
    <string name="information_not_enter">Please input &quot;Account&quot; &amp; &quot;Password&quot;.</string>

</resources>